--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,6 +15,34 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
+.video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+}
+.h1 {
+  font-size: 40px;
+  font-weight: 50;
+  background-image: linear-gradient(to left, #2683e0, #93c6d3);
+  color: transparent;
+  background-clip: text;
+
+}
+.video-container video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+
 body {
 
   font-family: Trebuchet, Arial, sans-serif;
